--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.2.4",
     "@types/lodash": "^4.14.191",
+    "cypress": "^11.2.0",
     "jasmine-core": "~4.5.0",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.3",
